--- a/index.html
+++ b/index.html
@@ -3,12 +3,120 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Frontend Developer CV and Resume</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f9;
+            color: #333;
+        }
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background: #fff;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        .header {
+            text-align: center;
+        }
+        .header h1 {
+            margin: 0;
+            font-size: 2.5em;
+            color: #007bff;
+        }
+        .header p {
+            font-size: 1.2em;
+            margin: 5px 0 20px;
+        }
+        .section {
+            margin-bottom: 20px;
+        }
+        .section h2 {
+            border-bottom: 2px solid #898a8b;
+            padding-bottom: 5px;
+            margin-bottom: 15px;
+            color: #007bff;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        ul li {
+            margin: 5px 0;
+        }
+        .skills span {
+            display: inline-block;
+            background: #001b38;
+            color: #fff;
+            padding: 5px 10px;
+            margin: 5px;
+            border-radius: 5px;
+        }
+        footer {
+            text-align: center;
+            font-size: 0.9em;
+            color: #777;
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Javascript fundamentals</h1>
-    <p>function section</p>
-    <script src="script.js"></script>
+    <div class="container">
+        <div class="header">
+            <h1>Frederick Douglas</h1>
+            <p>Frontend Developer | Technical Writer</p>
+            <p>Email: FredDouglas@gmail.com | Phone: (+234) 9131-4810-31 </p>
+        </div>
+
+        <div class="section">
+            <h2>Profile</h2>
+            <p>A passionate frontend developer with expertise in HTML, CSS, and JavaScript. Skilled in creating responsive and user-friendly web applications. Enthusiastic about learning new technologies and delivering innovative solutions.</p>
+        </div>
+
+        <div class="section">
+            <h2>Skills</h2>
+            <div class="skills">
+                <span>HTML</span>
+                <span>CSS</span>
+                <span>JavaScript</span>
+                <span>Tailwind CSS</span>
+                <span>React</span>
+                <span>Git</span>
+            </div>
+        </div>
+
+        <div class="section">
+            <h2>Experience</h2>
+            <ul>
+                <li><strong>Frontend Developer</strong> - MoscowTech-Hub (2023 - Present)</li>
+                <p>Developed and maintained web applications using modern frontend technologies. Collaborated with designers and backend developers to create seamless user experiences.</p>
+
+                <li><strong>Technical Writer</strong> - Web3tech-hub (2023 - Present)</li>
+                <p>Created technical documentation and tutorials for web development technologies, focusing on clarity and usability.</p>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>Education</h2>
+            <ul>
+                <li><strong>Bachelor of Science in Computer Science</strong> - University of port-Hacourt (2023 - Till date)</li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>Projects</h2>
+            <ul>
+                <li><strong>Interactive Tapping Game</strong></li>
+                <p>Built an engaging game using JavaScript and Tailwind CSS to teach basic programming concepts interactively.</p>
+
+                <li><strong>Portfolio Website</strong></li>
+                <p>Designed a responsive portfolio showcasing web development and technical writing projects.</p>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
